--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,8 +1,9 @@
+
 /* 
-    http://meyerweb.com/eric/tools/css/reset/ 
-    v2.0 | 20110126
-    License: none (public domain)
-    *This removes the web browsers default styles*
+http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+*This removes the web browsers default styles*
 */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -27,165 +28,161 @@ table {border-collapse: collapse;border-spacing: 0;}
 ul, ol {list-style: inside;}
 a {display: inline-block}
 
+main {min-height: calc(100vh - 23px);}
+nav {display: flex; flex-flow: row wrap; justify-content: center; align-items: center;}
+@media only screen and (min-width: 1024px) { nav{max-width: 600px; margin-left: auto; margin-right: auto;}}
+nav a {min-width: 200px; display: flex; align-items: center; justify-content: center; flex-basis: 0; flex-grow: 1; padding: 10px;}
 
-/*
-header,
-footer {
-    border: 2px solid gray;
-}
+#transaction {text-align: left; max-width: 600px; margin-left: auto; margin-right: auto;}
+#transaction > * {display:block;}
+#transaction > * + * {margin-top: 20px;}
+#transaction > label + * {margin-top: 10px;}
+#transaction label, #transaction button {font-family: 'Open Sans', sans-serif; font-size: 15px;}
+#transaction input, #transaction button, #transaction select {width: 100%;}
+#transaction input, #transaction button {border-radius: 5px; border: 1px solid gray;}
+#transaction input {height: 30px;}
+#transaction button {padding: 15px 30px; word-wrap: break-word; background-color: lightgray; text-transform: uppercase; font-weight: 700; color: black;cursor: pointer;transition: all 0.3s ease-in;}
+#transaction button:hover {background-color: gray; color: white;}
 
-nav {
-    border: 3px solid yellow;
-}
+#list{text-align: center; width: 100%; max-width: 600px; margin-left: auto; margin-right: auto;}
+#list th {font-family: 'Bree Serif', serif; padding: 5px; width: 33.333%}
+#list + *{max-width: 600px; margin-left: auto; margin-right:auto; background-color: lightgray; font-weight: 700;}
 
-main {
-    border: 2px solid red;
-}
+.green {color: green}
+.red {color: red}
 
-section {
-    border: 5px solid blue;
-}
-
-div {
-    border: 3px solid orange;
-}
-*/
 
 /*
 -----------------------------------------------------------
-    OUR STYLES BEGIN HERE
+OUR STYLES BEGIN HERE
 -----------------------------------------------------------
 */
 
 section {
-    padding-top: 40px;
-    padding-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 section div {
-    padding: 20px;
+  padding: 20px;
 }
 
 header,
 footer {
-    background-color: gray;
-    padding: 40px;
+  background-color: gray;
+  padding: 40px;
 }
 
 div > * + * {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 header,
 main,
 footer {
-    text-align: center;
+  text-align: center;
 }
 
 li {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
 }
 
 li + li {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 h1,
 h2,
 h3 {
-    font-family: 'Bree Serif', serif;
+  font-family: 'Bree Serif', serif;
 }
 
 h1 {
-    font-size: 32px;
+  font-size: 32px;
 }
 
 h2 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 h3 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
 }
 
 a {
-    color: red;
-    font-family: 'Bree Serif', serif;
+  color: red;
+  font-family: 'Bree Serif', serif;
 }
 
 a:visited {
-    color: blue;
+  color: blue;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:active {
-    border: 2px dashed black;
+  border: 2px dashed black;
 }
 
 nav a {
-    color: white;
-}
-
-nav a + a {
-    margin-left: 20px;
+  color: white;
 }
 
 .icon {
-    width: 80px;
-    height: 80px;
+  width: 80px;
+  height: 80px;
 }
 
 .icon-section {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 .logo {
-    font-family: 'Bree Serif', serif;
-    font-size: 40px;
-    color: white;
-    margin-bottom: 40px;
+  font-family: 'Bree Serif', serif;
+  font-size: 40px;
+  color: white;
+  margin-bottom: 40px;
 }
 
 
 /*
 -----------------------------------------------------------
-    DESKTOP STYLES
+DESKTOP STYLES
 -----------------------------------------------------------
 */
 
 @media only screen and (min-width: 1024px) {
-    body {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-    section {
-        display: flex;
-        flex-flow: wrap;
-        justify-content: center;
-        align-items: stretch;
-    }
-    
-    section div {
-        padding-left: 40px;
-        padding-right: 40px;
-        flex-basis: 100%;
-    }
-    
-    .icon-section div {
-        flex-basis: 33.33%;
-    }
-    
-    .contact-section div {
-        flex-basis: 50%;
-    }
+  body {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  section {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    align-items: stretch;
+  }
+
+  section div {
+    padding-left: 40px;
+    padding-right: 40px;
+    flex-basis: 100%;
+  }
+
+  .icon-section div {
+    flex-basis: 33.33%;
+  }
+
+  .contact-section div {
+    flex-basis: 50%;
+  }
 }
